cmake_minimum_required(VERSION 3.10)
project(bench C)

set(CMAKE_C_STANDARD 11)

# Find TidesDB library
find_library(TIDESDB_LIB tidesdb PATHS ${TIDESDB_BUILD_DIR} REQUIRED)

# Optional: Find RocksDB
find_library(ROCKSDB_LIB rocksdb)
if(ROCKSDB_LIB)
    add_definitions(-DHAVE_ROCKSDB)
    set(ROCKSDB_LIBS ${ROCKSDB_LIB})
endif()

# Benchmark sources
add_executable(bench
        main.c
        benchmark.c
        engine_tidesdb.c
        engine_rocksdb.c
        engine_registry.c
)

target_link_libraries(bench ${TIDESDB_LIB} ${ROCKSDB_LIBS} pthread m)